--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="pt-br" ng-app="myApp">
 <head>
-  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="content-language" content="pt-br" />
   <title>PONTO -  QUALIMEDIA</title>
   <!-- <link rel="stylesheet" href="css/app.css"/> -->
 
